@@ -3,6 +3,8 @@
 	* src/interface.c, src/support.c: Use accessor function instead of direct
 	access to various struct members. Compiler flag 'GSEAL_ENABLE' is used
 	to detect such direct access.
+	* src/interface.c, src/gui-input-symbol.c: Replace deprecated API calls
+	related to GtkCombo with those of GtkComboBox.
 	* configure.in: Bumped required GTK version as per above changes.
 
 2011-05-14  Onkar Shinde  <onkarshinde@gmail.com>
